--- a/css/milestone2_stylesheet.css
+++ b/css/milestone2_stylesheet.css
@@ -1,6 +1,7 @@
 h1 {
 	color: #006699;
 	font-family: "Helvetica Neue", sans-serif;
+	image-orientation: center;
 	margin-left: 5px;
 	margin-right: 5px;
 	margin-top: 7px;
