--- a/css/milestone2_stylesheet.css
+++ b/css/milestone2_stylesheet.css
@@ -1,7 +1,6 @@
 h1 {
 	color: #006699;
 	font-family: "Helvetica Neue", sans-serif;
-	image-orientation: center;
 	margin-left: 5px;
 	margin-right: 5px;
 	margin-top: 7px;
@@ -9,13 +8,19 @@ h1 {
 	text-shadow: 2px 2px 2px #636EFF;
 }
 
+h2 {
+	color: #006699
+}
+
+a {
+	alignment: center;
+}
+
 body {
 	background-color: rgba(137, 166, 87, .4);
 }
 
-h2 {
-	color: #006699
-}
+
 p {
 	font-family: "Roboto", sans-serif;
 }
