--- a/css/milestone3_stylesheet.css
+++ b/css/milestone3_stylesheet.css
@@ -1,3 +1,6 @@
+/**
+* H1 will be Helvetica Neue blue with a purple shadow.
+**/
 h1 {
 	color: #006699;
 	font-family: "Helvetica Neue", sans-serif;
@@ -8,14 +11,19 @@ h1 {
 	text-shadow: 2px 2px 2px #636EFF;
 }
 
+/**
+* H2 will be Helvetica Neue blue with no shadow.
+**/
+
 h2 {
 	color: #006699
-}
-
-
-p {
 	font-family: "Helvetica Neue", sans-serif;
 }
+
+/**
+* Everything in the body will be Helvetica Neue
+**/
+
 
 body {
 	font-family: "Helvetica Neue", sans-serif;
