--- a/css/milestone3_stylesheet.css
+++ b/css/milestone3_stylesheet.css
@@ -29,6 +29,117 @@ body {
 	font-family: "Helvetica Neue", sans-serif;
 }
 
+/**
+* add photos that will be displayed on page
+**/
+
 .photos img {
 	position: absolute;
+}
+.photos img:nth-of-type(1) {
+	left: 50px;
+	top: 50px;
+}
+
+.photos img:nth-of-type(2) {
+	left: 150px;
+	top: 100px;
+}
+
+.photos img:nth-of-type(3) {
+	left: 250px;
+	top: 50px;
+}
+
+.photos img:nth-of-type(4) {
+	left: 350px;
+	top: 150px;
+}
+
+/**
+* random rotation on page
+**/
+
+.photos img:nth-of-type(1) {
+	left: 50px;
+	top: 50px;
+	-webkit-transform: rotate(5deg);
+	-moz-transform: rotate(5deg);
+	-o-transform: rotate(5deg);
+	transform: rotate(5deg);
+}
+
+.photos img:nth-of-type(2) {
+	left: 150px;
+	top: 100px;
+	-webkit-transform: rotate(-10deg);
+	-moz-transform: rotate(-10deg);
+	-o-transform: rotate(-10deg);
+	transform: rotate(-10deg);
+}
+
+.photos img:nth-of-type(3) {
+	left: 250px;
+	top: 50px;
+	-webkit-transform: rotate(7deg);
+	-moz-transform: rotate(7deg);
+	-o-transform: rotate(7deg);
+	transform: rotate(7deg);
+}
+
+.photos img:nth-of-type(4) {
+	left: 350px;
+	top: 150px;
+	-webkit-transform: rotate(-3deg);
+	-moz-transform: rotate(-3deg);
+	-o-transform: rotate(-3deg);
+	transform: rotate(-3deg);
+}
+
+/**
+* add a hover function
+**/
+
+.photos img:hover {
+	-webkit-transform: scale(1.5);
+	-moz-transform: scale(1.5);
+	-o-transform: scale(1.5);
+	transform: scale(1.5);
+	z-index: 10;
+}
+
+/**
+* additional rotation
+**/
+
+.photos img:hover {
+	-webkit-transform: rotate(380deg) scale(1.5);
+	-moz-transform: rotate(380deg) scale(1.5);
+	-o-transform: rotate(380deg) scale(1.5);
+	transform: rotate(380deg) scale(1.5);
+	z-index: 10;
+}
+
+/**
+* add tranisitons
+**/
+
+.photos img {
+	-webkit-transition: all 0.5s ease-out;
+	-moz-transition: all 0.5s ease-out;
+	-o-transition: all 0.5s ease-out;
+	transition: all 0.5s ease-out;
+}
+
+/**
+* add white padding around images
+**/
+
+.photos img {
+	-webkit-transition: all 0.5s ease-out;
+	-moz-transition: all 0.5s ease-out;
+	-o-transition: all 0.5s ease-out;
+	transition: all 0.5s ease-out;
+	padding: 10px 10px 10px 10px;
+	background: white;
 }
