Added figure role=group to align figure and figure caption.

--- a/css/milestone3_stylesheet.css
+++ b/css/milestone3_stylesheet.css
@@ -29,6 +29,11 @@ body {
 	font-family: "Helvetica Neue", sans-serif;
 }
 
+figure {
+	display: block;
+	text-align: center;
+}
+
 figcaption {
 	display: block;
 	text-align: center;
