--- a/css/covercustom.css
+++ b/css/covercustom.css
@@ -27,24 +27,17 @@ a:hover {
 html,
 body {
 	height: 100%;
-}
+	background-color: #333;
 }
 body {
-	/* color: #fff;*/
+	color: #fff;
 	text-align: center;
 	text-shadow: 0 1px 3px rgba(0,0,0,.5);
- 	background: url(../images/CloudCover.jpg.jpg) no-repeat center center fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-}
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
 	display: table;
-	content: url("../images/CloudCover.jpg") no-repeat scroll 0px 100% / cover transparent;
 	width: 100%;
 	height: 100%; /* For at least Firefox */
 	min-height: 100%;
