--- a/css/carousel.css
+++ b/css/carousel.css
@@ -8,6 +8,16 @@ body {
 	color: #5a5a5a;
 }
 
+IMG.displayed {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 60px
+}
+
+nav {
+	padding-bottom: 60px;
+}
 
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
@@ -52,6 +62,7 @@ body {
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
 	z-index: 10;
+	margin-bottom: 150px;
 }
 
 /* Declare heights because of positioning of img element */
