Whole new site.

--- a/css/covercustom.css
+++ b/css/covercustom.css
@@ -9,16 +9,53 @@ a:hover {
 	color: #fff;
 }
 
-/* Custom default button */
-.btn-default,
-.btn-default:hover,
-.btn-default:focus {
-	color: #284271;
-	text-shadow: none; /* Prevent inheritence from `body` */
-	background-color: #fff;
-	border: 1px solid #fff;
+
+/**************************
+  DEFAULT BOOTSTRAP STYLES
+**************************/
+
+.btn {
+	display: inline-block;
+	padding: 6px 12px;
+	margin-bottom: 0;
+	font-size: 14px;
+	font-weight: normal;
+	line-height: 1.42857143;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	background-image: none;
+	border: 1px solid transparent;
+	border-radius: 4px;
+	padding: 10px 16px;
 }
 
+.btn-lg {
+	font-size: 18px;
+	line-height: 1.33;
+	border-radius: 6px;
+}
+
+.btn-primary {
+	color: #fff;
+	background-color: transparent;
+	border-color: white;
+}
+
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active,
+.open .dropdown-toggle.btn-primary {
+	color: #fff;
+	background-color: transparent;
+	border-color: white;
+}
 
 /*
  * Base structure
@@ -27,7 +64,7 @@ a:hover {
 html,
 body {
 	height: 100%;
-	background-color: #333;
+	background-color: #284271;
 }
 body {
 	color: #fff;
@@ -37,13 +74,13 @@ body {
 
 /* font modifications **/
 .h1, h1 {
-  font-size: 48px;
+  font-size: 64px;
 }
 .h1 {
   margin-top: 20px;
   margin-bottom: 10px;
 }
-.h1, h1 {
+.h1, .h3, h1, h3 {
 	font-family: inherit;
 	font-weight: 300;
 	line-height: 1.5;
@@ -68,7 +105,6 @@ body {
 	-o-background-size: cover;
 	background-size: cover;
 }
-
 .cover-container {
 	margin-right: auto;
 	margin-left: auto;
@@ -124,6 +160,8 @@ body {
 	.masthead-nav {
 		float: right;
 	}
+	.lead {
+		font-size: 34px;
 }
 
 
@@ -156,7 +194,10 @@ body {
 
 /* Center align the text within the three columns below the carousel */
 .container-marketing {
-	position: absolute
+	position: relative;
+	margin-right: auto;
+	margin-left: auto;
+	padding-top: 30px;
 }
 .marketing .col-lg-4 {
 	margin-bottom: 20px;
@@ -165,18 +206,31 @@ body {
 .marketing h2 {
 	font-weight: normal;
 }
-.marketing .col-lg-4 p {
-	margin-right: 10px;
-	margin-left: 10px;
-}
+/*.marketing .col-lg-4 p {*/
+	/*margin-right: 10px;*/
+	/*margin-left: 10px;*/
+/*}*/
 /*
  * Footer
  */
 
 .mastfoot {
-	color: #284271; /* IE8 proofing */
-	color: rgba(255,255,255,.5);
+	color: #284271;
+	text-shadow: none;/* IE8 proofing */
+	text-align: left;
 }
+/*.container-mastfoot {*/
+	/*position: fixed;*/
+	/*margin-right: auto;*/
+	/*margin-left: auto;*/
+	/*padding-top: 30px;*/
+/*}*/
+/*.mastfoot .col-lg-4 {*/
+	/*margin-bottom: 0px;*/
+	/*text-align: left;*/
+/*}*/
+/*.mastfoot h3 {*/
+	/*font-weight: normal;*/
 
 
 /*
@@ -189,9 +243,14 @@ body {
 		position: fixed;
 		top: 0;
 	}
+	.masthead-brand {
+		font-size: 24px;
+	}
+
 	.mastfoot {
 		position: fixed;
 		bottom: 0;
+	}
 	}
 	/* Start the vertical centering */
 	.site-wrapper-inner {
@@ -211,4 +270,5 @@ body {
 	.cover-container {
 		width: 700px;
 	}
+
 }
