--- a/css/covercustom.css
+++ b/css/covercustom.css
@@ -218,13 +218,20 @@ body {
 	margin-right: auto;
 	margin-left: auto;
 	padding-top: 30px;
+}
 
 .marketing .col-lg-4 {
 	margin-bottom: 20px;
 	text-align: left;
+}
 
 .marketing h2 {
 	font-weight: normal;
+}
+
+.container-about {
+	text-align: left;
+}
 
 /*.marketing .col-lg-4 p {*/
 /*margin-right: 10px;*/
