Added new index, script, style, head, header-util, and footer files for reboot of PWP

--- a/css/subpagecustom.css
+++ b/css/subpagecustom.css
@@ -136,7 +136,7 @@ body {
 /********************************************
 * Footer Styles
 ********************************************/
-footer {
+.footer {
 	background: #284271;
 	color: white;
 	font-weight: bold;
