--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,9 @@
 * 3. Footer Syles
 * 4. Flexbox Sticky Footer Styles
 * 5. Slide Toggle Styles
+* 6. Button Styles
+* 7. Centering
+* 8. Font changes
 *
 ********************************************/
 
@@ -30,6 +33,10 @@ a { color: white;}
 	background-size: cover;
 }
 
+.bg-blue {
+	background-color: #284271;
+}
+
 /********************************************
 * Navigation Styles
 ********************************************/
@@ -43,11 +50,25 @@ a { color: white;}
 
 .welcome {
 	text-align: center;
+	vertical-align: middle;
 }
 
 .icon-bar {
 	background-color: white;
 }
+
+.cover-heading {
+	text-align: center;
+	font-size: 64px;!important;
+}
+
+.cover-subheading {
+	text-align: center;
+	font-size: 34px;!important;
+}
+
+
+
 
 
 /********************************************
@@ -55,6 +76,7 @@ a { color: white;}
 ********************************************/
 .footer {
 	padding: 20px 0;
+	font-color: #284271;
 }
 
 /********************************************
@@ -84,4 +106,93 @@ a { color: white;}
 #answer {
 	/*this hides the answer by default*/
 	display: none;
+}
+
+/********************************************
+* Button Styles
+*
+********************************************/
+.cover-button {
+	vertical-align: text-bottom;
+}
+
+.btn {
+	display: inline-block;
+	padding: 6px 12px;
+	margin-bottom: 0;
+	font-size: 14px;
+	font-weight: normal;
+	line-height: 1.42857143;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	background-image: none;
+	border: 1px solid transparent;
+	border-radius: 4px;
+	padding: 10px 16px;
+}
+
+.btn-lg {
+	font-size: 18px;
+	line-height: 1.33;
+	border-radius: 6px;
+}
+
+.btn-primary {
+	color: #fff;
+	background-color: transparent;
+	border-color: white;
+}
+
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active,
+.open .dropdown-toggle.btn-primary {
+	color: #fff;
+	background-color: transparent;
+	border-color: white;
+}
+
+/********************************************
+* Centering the container
+*
+********************************************/
+.site-content.padding {
+	padding-top: 150px;
+}
+
+.centered {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	/* bring your own prefixes */
+	transform: translate(-50%, -50%);
+}
+
+/********************************************
+* Font Changes
+*
+********************************************/
+.h1, h1 {
+	font-size: 64px;
+}
+.h1 {
+	margin-top: 20px;
+	margin-bottom: 10px;
+}
+.h1, .h3, h1, h3 {
+	font-family: inherit;
+	font-weight: 300;
+	line-height: 1.5;
+	color: inherit;
+}
+
+.p {
+	font-size: 16px;
 }
