--- a/css/style.css
+++ b/css/style.css
@@ -41,11 +41,11 @@ a { color: white;}
 * Navigation Styles
 ********************************************/
 .navbar {
-	-webkit-transition: all 500ms ease;
-	-moz-transition: all 500ms ease;
-	-ms-transition: all 500ms ease;
-	-o-transition: all 500ms ease;
-	transition: all 500ms ease;
+	-webkit-transition: all 300ms ease;
+	-moz-transition: all 300ms ease;
+	-ms-transition: all 300ms ease;
+	-o-transition: all 300ms ease;
+	transition: all 300ms ease;
 }
 
 .welcome {
@@ -97,13 +97,22 @@ a { color: white;}
 * slideToggle Placeholder Styles
 * Edit as you see fit
 ********************************************/
-.qa-panel {
-	border: 1px solid;
-	padding: 20px;
-	margin-bottom: 15px;
+/*.qa-panel {*/
+.para {
+	/*border: 1px solid;*/
+	padding: 10px;
+	margin-bottom: 5px;
 }
 
-#answer {
+#answer-1 {
+	/*this hides the answer by default*/
+	display: none;
+}
+#answer-2 {
+	/*this hides the answer by default*/
+	display: none;
+}
+#answer-3 {
 	/*this hides the answer by default*/
 	display: none;
 }
@@ -163,6 +172,10 @@ a { color: white;}
 * Centering the container
 *
 ********************************************/
+#page-container {
+	margin-top: 40px;
+}
+
 .site-content.padding {
 	padding-top: 150px;
 }
