--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 * 6. Button Styles
 * 7. Centering
 * 8. Font changes
+* 9. Thumbnail Styles
 *
 ********************************************/
 
@@ -203,3 +204,22 @@ a { color: white;}
 /*.p {*/
 	/*font-size: 16px;*/
 /*}*/
+
+/********************************************
+* Thumbnail Styles
+*
+********************************************/
+
+.thumbnail {
+	background: transparent;
+	font-color: white;
+	border-color: none;
+}
+body {
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-size: 14px;
+	line-height: 1.42857143;
+	font-color: white;
+	color: #fff;
+	background-color: transparent;
+}
