--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ a { color: white;}
 /*.qa-panel {*/
 .para {
 	/*border: 1px solid;*/
-	padding: 10px;
+	/*padding: 10px;*/
 	margin-bottom: 5px;
 }
 
