Reformatted the form page

--- a/css/style.css
+++ b/css/style.css
@@ -132,11 +132,12 @@ a { color: white;}
 ********************************************/
 .cover-button {
 	vertical-align: text-bottom;
+	padding-top: 50px;
 }
 
 .btn {
 	display: inline-block;
-	padding: 6px 12px;
+	/*padding: 6px 12px;*/
 	margin-bottom: 0;
 	font-size: 14px;
 	font-weight: normal;
@@ -152,7 +153,7 @@ a { color: white;}
 	background-image: none;
 	border: 1px solid transparent;
 	border-radius: 4px;
-	padding: 10px 16px;
+	/*padding: 10px 16px;*/
 }
 
 .btn-lg {
