Traded out email processors

--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,10 @@ a { color: white;}
 	border-color: white;
 }
 
+.button {
+	color: #284271;
+}
+
 /********************************************
 * Centering the container
 *
